--- a/index.html
+++ b/index.html
@@ -30,25 +30,25 @@
 
     <div class="carousel-container">
         <div class="carousel">
-          <div class="carousel-slide">
-            <img src="./assets/Screenshot 2024-12-02 103321.png" alt="Image 1" >
-            <img src="./assets/Screenshot 2024-12-02 103338.png" alt="Image 2">
-            <img src="./assets/Screenshot 2024-12-02 103353.png" alt="Image 3">
-            <img src="./assets/Screenshot 2024-12-02 103405.png" alt="Image 4">
-            <img src="./assets/Screenshot 2024-12-02 103412.png" alt="Image 5">
-          </div>
+            <div class="carousel-slide">
+                <img src="./assets/Screenshot 2024-12-02 103321.png" alt="Image 1">
+                <img src="./assets/Screenshot 2024-12-02 103338.png" alt="Image 2">
+                <img src="./assets/Screenshot 2024-12-02 103353.png" alt="Image 3">
+                <img src="./assets/Screenshot 2024-12-02 103405.png" alt="Image 4">
+                <img src="./assets/Screenshot 2024-12-02 103412.png" alt="Image 5">
+            </div>
         </div>
         <button class="prev" onclick="moveSlide(-1)">❮</button>
         <button class="next" onclick="moveSlide(1)">❯</button>
-      </div>
+    </div>
 
-      <script src="script.js"></script>
+    <script src="script.js"></script>
 
 
 
-      <h2 class="head">OUR INTELLIGENT COLLECTION</h2>
+    <h2 class="head">OUR INTELLIGENT COLLECTION</h2>
 
-      <div class="product-grid">
+    <div class="product-grid">
         <div class="product-card">
             <img src="./assets/Screenshot 2024-12-02 105857.png" alt="Product 1">
         </div>
@@ -78,6 +78,40 @@
         </div>
         <div class="product-card">
             <img src="./assets/Screenshot 2024-12-02 105958.png" alt="Product 10">
+        </div>
+    </div>
+
+
+    <div class="container">
+        <div class="image-section">
+            <img src="./assets/shirt_banner_89f920da-d00c-4ed4-b588-da68bfd9b03d.png" alt="Man in formal shirt"
+                width="800px" height="790px">
+        </div>
+        <div class="text-section">
+            <h1>INNOVATIVE COMFORT</h1>
+            <p>
+                Our premium fabric is designed to combat stains and odors,
+                providing a seamless blend of practicality and elegance.
+            </p>
+            <a href="#" class="shop-now-button">SHOP NOW</a>
+        </div>
+    </div>
+
+
+
+    <div class="container">
+        <div class="image-section">
+            <img src="./assets/06_7367be78-3ffc-48a2-8956-840371a9a406.png" alt="Man in formal shirt"
+                width="800px" height="790px">
+        </div>
+        <div class="text-section">
+            <h1>TRAVEL UNLIMITED</h1>
+            <p>
+                30 Days No Wash Travel Edition Jeans are your key to staying fresh on long trips. Perfect for those who love to explore.
+
+
+            </p>
+            <a href="#" class="shop-now-button">SHOP NOW</a>
         </div>
     </div>
 
