saved vedieo,testimonial and other content too

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+
+
     <ul style="list-style-type: none;" class="hehe">
         <li>MEN</li>
         <li>WOMEN</li>
@@ -18,7 +20,7 @@
     </ul>
 
     <div class="logo">
-        <img src="./assets/turms_logo_059e81a9-b89d-49cb-8a6d-89bc4cd59258.png" alt="" height="70px">
+        <img src="./assets/turms_logo_059e81a9-b89d-49cb-8a6d-89bc4cd59258 (1).png" alt="" height="70px">
     </div>
 
     <ul class="nav-icons">
@@ -26,6 +28,7 @@
         <li>ACCOUNT</li>
         <li>CART</li>
     </ul>
+
 
 
     <div class="carousel-container">
@@ -82,7 +85,7 @@
     </div>
 
 
-    <div class="container">
+    <!-- <div class="container">
         <div class="image-section">
             <img src="./assets/shirt_banner_89f920da-d00c-4ed4-b588-da68bfd9b03d.png" alt="Man in formal shirt"
                 width="800px" height="790px">
@@ -96,24 +99,123 @@
             <a href="#" class="shop-now-button">SHOP NOW</a>
         </div>
     </div>
-
+ -->
 
 
     <div class="container">
         <div class="image-section">
-            <img src="./assets/06_7367be78-3ffc-48a2-8956-840371a9a406.png" alt="Man in formal shirt"
-                width="800px" height="790px">
+            <img src="./assets/06_7367be78-3ffc-48a2-8956-840371a9a406.png" alt="Man in formal shirt">
         </div>
         <div class="text-section">
             <h1>TRAVEL UNLIMITED</h1>
             <p>
-                30 Days No Wash Travel Edition Jeans are your key to staying fresh on long trips. Perfect for those who love to explore.
+                30 Days No Wash Travel Edition Jeans are your key to staying fresh on long trips. Perfect for those who
+                love to explore.
 
 
             </p>
             <a href="#" class="shop-now-button">SHOP NOW</a>
         </div>
     </div>
+
+    <div class="video-container">
+        <div class="video">
+            <video autoplay muted loop controls>
+                <source
+                    src="https://urturms.com/cdn/shop/videos/c/vp/f5b553955b7145c4b54006c682a7008a/f5b553955b7145c4b54006c682a7008a.HD-1080p-7.2Mbps-17983875.mp4?v=0"
+                    type="video/mp4">
+            </video>
+        </div>
+
+
+        <div class="text-overlay">
+            <h4>30 DAYS NO WASH TRAVEL EDITION JEANS</h4>
+            <h1>WHERE STYLE MEETS INNOVATION</h1>
+            <p>
+                Explore the Fusion of Fashion and Technology with Turms Intelligent Apparels
+            </p>
+            <a href="#" class="shop-now-button">SHOP NOW</a>
+        </div>
+    </div>
+
+
+    <p style="margin-top: 70px; margin-left: 10px; font-size: 16px; color: #6c7070;">Innovation Unveiled: Unisex Edition
+    </p>
+    <p style="margin-top: 18px; margin-left: 10px; font-size: 28px; font-weight: bold;">OUR LATEST WOMEN'S SMART FASHION
+    </p>
+
+    <div class="unique-product-card">
+        <div class="unique-image-container">
+            <span class="unique-badge">Festive Sale</span>
+            <img src="./assets/Screenshot 2024-12-02 135239.png" alt="Cranberry T-shirt" class="unique-product-image">
+        </div>
+        <div class="unique-product-details">
+            <p class="unique-product-type">INTELLIGENT ROUND NECK T-SHIRT</p>
+            <h2 class="unique-product-name">CRANBERRY</h2>
+            <p class="unique-product-price">
+                Rs. 999.00 <span class="unique-original-price">Rs. 1,599.00</span>
+            </p>
+        </div>
+    </div>
+
+
+
+    <div class="pic">
+        <img src="./assets/Screenshot 2024-12-02 135619.png" alt="" height="700px" width="700px">
+    </div>
+
+
+    <div class="thala">
+        <img src="./assets/Screenshot 2024-12-02 141330.png" alt="" width="790px" height="360px">
+    </div>
+
+
+    <div class="text-section1">
+        <h2 style="color: white; font-size: 40px;">DHONI SPOTTED IN TURMS!</h2>
+        <p style="color: white;">Your chance to embrace the legendary style</p>
+    </div>
+
+    <section class="reviews-section">
+        <h2 class="section-title">LET CUSTOMERS SPEAK FOR US</h2>
+        <p class="review-summary">
+          <span class="stars">★★★★★</span><br>
+          from <strong>102 reviews</strong>
+        </p>
+        <div class="reviews-container">
+          <div class="review-card">
+            <div class="stars">★★★★★</div>
+            <h3>Fluorescent sky blue</h3>
+            <p>Fluorescent sky blue colour t-shirt<br>Lounch</p>
+            <div class="review-author">
+              <img src="./assets//alpine_2_still_70x70.png" alt="Reviewer" class="author-img">
+              <p>m.z.k.</p>
+            </div>
+          </div>
+          <div class="review-card">
+            <div class="stars">★★★★★</div>
+            <h3>Good product</h3>
+            <p>Good product nice texture of apparel</p>
+            <div class="review-author">
+              <img src="./assets/02_4395d9f8-c97b-461f-b029-c648fcb4e4b4_70x70.png" alt="Reviewer" class="author-img">
+              <p>K.S.</p>
+            </div>
+          </div>
+          <div class="review-card">
+            <div class="stars">★★★★★</div>
+            <h3>Extra soft premium</h3>
+            <p>Extra soft premium look value for money<br>New product waiting</p>
+            <div class="review-author">
+              <img src="./assets/01_5eec761b-24de-4179-842a-44cb96cb9d5a_70x70.png" alt="Reviewer" class="author-img">
+              <p>Yogesh Bhandari</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+      
+
+
 
 
 
