--- a/index.html
+++ b/index.html
@@ -2,218 +2,278 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="styles.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>turms</title>
+  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>turms</title>
 </head>
 
 <body>
 
 
-    <ul style="list-style-type: none;" class="hehe">
-        <li>MEN</li>
-        <li>WOMEN</li>
-        </li> SHARK'S FAVOURITE</li>
-        <li>ABOUT US</li>
-        <li>REVIEW</li>
-    </ul>
+  <ul style="list-style-type: none;" class="hehe">
+    <li>MEN</li>
+    <li>WOMEN</li>
+    </li> SHARK'S FAVOURITE</li>
+    <li>ABOUT US</li>
+    <li>REVIEW</li>
+  </ul>
 
-    <div class="logo">
-        <img src="./assets/turms_logo_059e81a9-b89d-49cb-8a6d-89bc4cd59258 (1).png" alt="" height="70px">
+  <div class="logo">
+    <img src="./assets/turms_logo_059e81a9-b89d-49cb-8a6d-89bc4cd59258 (1).png" alt="" height="70px">
+  </div>
+
+  <ul class="nav-icons">
+    <li>SEARCH</li>
+    <li><a href="/form.html">ACCOUNT</a></li>
+    <li>CART</li>
+  </ul>
+
+
+
+  <div class="carousel-container">
+    <div class="carousel">
+      <div class="carousel-slide">
+        <img src="./assets/Screenshot 2024-12-02 103321.png" alt="Image 1">
+        <img src="./assets/Screenshot 2024-12-02 103338.png" alt="Image 2">
+        <img src="./assets/Screenshot 2024-12-02 103353.png" alt="Image 3">
+        <img src="./assets/Screenshot 2024-12-02 103405.png" alt="Image 4">
+        <img src="./assets/Screenshot 2024-12-02 103412.png" alt="Image 5">
+      </div>
     </div>
+    <button class="prev" onclick="moveSlide(-1)">❮</button>
+    <button class="next" onclick="moveSlide(1)">❯</button>
+  </div>
 
-    <ul class="nav-icons">
-        <li>SEARCH</li>
-        <li>ACCOUNT</li>
-        <li>CART</li>
-    </ul>
-
+  <script src="script.js"></script>
 
 
-    <div class="carousel-container">
-        <div class="carousel">
-            <div class="carousel-slide">
-                <img src="./assets/Screenshot 2024-12-02 103321.png" alt="Image 1">
-                <img src="./assets/Screenshot 2024-12-02 103338.png" alt="Image 2">
-                <img src="./assets/Screenshot 2024-12-02 103353.png" alt="Image 3">
-                <img src="./assets/Screenshot 2024-12-02 103405.png" alt="Image 4">
-                <img src="./assets/Screenshot 2024-12-02 103412.png" alt="Image 5">
-            </div>
-        </div>
-        <button class="prev" onclick="moveSlide(-1)">❮</button>
-        <button class="next" onclick="moveSlide(1)">❯</button>
+
+  <h2 class="head">OUR INTELLIGENT COLLECTION</h2>
+
+  <div class="product-grid">
+    <div class="product-card">
+      <img src="./assets/Screenshot 2024-12-02 105857.png" alt="Product 1">
     </div>
-
-    <script src="script.js"></script>
-
-
-
-    <h2 class="head">OUR INTELLIGENT COLLECTION</h2>
-
-    <div class="product-grid">
-        <div class="product-card">
-            <img src="./assets/Screenshot 2024-12-02 105857.png" alt="Product 1">
-        </div>
-        <div class="product-card">
-            <img src="./assets/Screenshot 2024-12-02 105903.png" alt="Product 2">
-        </div>
-        <div class="product-card">
-            <img src="./assets/Screenshot 2024-12-02 105909.png" alt="Product 3">
-        </div>
-        <div class="product-card">
-            <img src="./assets/Screenshot 2024-12-02 105917.png" alt="Product 4">
-        </div>
-        <div class="product-card">
-            <img src="./assets/Screenshot 2024-12-02 105925.png" alt="Product 5">
-        </div>
-        <div class="product-card">
-            <img src="./assets/Screenshot 2024-12-02 105932.png" alt="Product 6">
-        </div>
-        <div class="product-card">
-            <img src="./assets/Screenshot 2024-12-02 105938.png" alt="Product 7">
-        </div>
-        <div class="product-card">
-            <img src="./assets/Screenshot 2024-12-02 105944.png" alt="Product 8">
-        </div>
-        <div class="product-card">
-            <img src="./assets/Screenshot 2024-12-02 105952.png" alt="Product 9">
-        </div>
-        <div class="product-card">
-            <img src="./assets/Screenshot 2024-12-02 105958.png" alt="Product 10">
-        </div>
+    <div class="product-card">
+      <img src="./assets/Screenshot 2024-12-02 105903.png" alt="Product 2">
     </div>
-
-
-    <!-- <div class="container">
-        <div class="image-section">
-            <img src="./assets/shirt_banner_89f920da-d00c-4ed4-b588-da68bfd9b03d.png" alt="Man in formal shirt"
-                width="800px" height="790px">
-        </div>
-        <div class="text-section">
-            <h1>INNOVATIVE COMFORT</h1>
-            <p>
-                Our premium fabric is designed to combat stains and odors,
-                providing a seamless blend of practicality and elegance.
-            </p>
-            <a href="#" class="shop-now-button">SHOP NOW</a>
-        </div>
+    <div class="product-card">
+      <img src="./assets/Screenshot 2024-12-02 105909.png" alt="Product 3">
     </div>
- -->
-
-
-    <div class="container">
-        <div class="image-section">
-            <img src="./assets/06_7367be78-3ffc-48a2-8956-840371a9a406.png" alt="Man in formal shirt">
-        </div>
-        <div class="text-section">
-            <h1>TRAVEL UNLIMITED</h1>
-            <p>
-                30 Days No Wash Travel Edition Jeans are your key to staying fresh on long trips. Perfect for those who
-                love to explore.
-
-
-            </p>
-            <a href="#" class="shop-now-button">SHOP NOW</a>
-        </div>
+    <div class="product-card">
+      <img src="./assets/Screenshot 2024-12-02 105917.png" alt="Product 4">
     </div>
+    <div class="product-card">
+      <img src="./assets/Screenshot 2024-12-02 105925.png" alt="Product 5">
+    </div>
+    <div class="product-card">
+      <img src="./assets/Screenshot 2024-12-02 105932.png" alt="Product 6">
+    </div>
+    <div class="product-card">
+      <img src="./assets/Screenshot 2024-12-02 105938.png" alt="Product 7">
+    </div>
+    <div class="product-card">
+      <img src="./assets/Screenshot 2024-12-02 105944.png" alt="Product 8">
+    </div>
+    <div class="product-card">
+      <img src="./assets/Screenshot 2024-12-02 105952.png" alt="Product 9">
+    </div>
+    <div class="product-card">
+      <img src="./assets/Screenshot 2024-12-02 105958.png" alt="Product 10">
+    </div>
+  </div>
 
-    <div class="video-container">
-        <div class="video">
-            <video autoplay muted loop controls>
-                <source
-                    src="https://urturms.com/cdn/shop/videos/c/vp/f5b553955b7145c4b54006c682a7008a/f5b553955b7145c4b54006c682a7008a.HD-1080p-7.2Mbps-17983875.mp4?v=0"
-                    type="video/mp4">
-            </video>
-        </div>
+
+  <div class="container">
+    <div class="image-section">
+      <img src="./assets/06_7367be78-3ffc-48a2-8956-840371a9a406.png" alt="Man in formal shirt">
+    </div>
+    <div class="text-section">
+      <h1>TRAVEL UNLIMITED</h1>
+      <p>
+        30 Days No Wash Travel Edition Jeans are your key to staying fresh on long trips. Perfect for those who
+        love to explore.
 
 
-        <div class="text-overlay">
-            <h4>30 DAYS NO WASH TRAVEL EDITION JEANS</h4>
-            <h1>WHERE STYLE MEETS INNOVATION</h1>
-            <p>
-                Explore the Fusion of Fashion and Technology with Turms Intelligent Apparels
-            </p>
-            <a href="#" class="shop-now-button">SHOP NOW</a>
-        </div>
+      </p>
+      <a href="#" class="shop-now-button">SHOP NOW</a>
+    </div>
+  </div>
+
+  <div class="video-container">
+    <div class="video">
+      <video autoplay muted loop controls>
+        <source
+          src="https://urturms.com/cdn/shop/videos/c/vp/f5b553955b7145c4b54006c682a7008a/f5b553955b7145c4b54006c682a7008a.HD-1080p-7.2Mbps-17983875.mp4?v=0"
+          type="video/mp4">
+      </video>
     </div>
 
 
-    <p style="margin-top: 70px; margin-left: 10px; font-size: 16px; color: #6c7070;">Innovation Unveiled: Unisex Edition
+    <div class="text-overlay">
+      <h4>30 DAYS NO WASH TRAVEL EDITION JEANS</h4>
+      <h1>WHERE STYLE MEETS INNOVATION</h1>
+      <p>
+        Explore the Fusion of Fashion and Technology with Turms Intelligent Apparels
+      </p>
+      <a href="#" class="shop-now-button">SHOP NOW</a>
+    </div>
+  </div>
+
+
+  <p style="margin-top: 70px; margin-left: 10px; font-size: 16px; color: #6c7070;">Innovation Unveiled: Unisex Edition
+  </p>
+  <p style="margin-top: 18px; margin-left: 10px; font-size: 28px; font-weight: bold;">OUR LATEST WOMEN'S SMART FASHION
+  </p>
+
+  <div class="unique-product-card">
+    <div class="unique-image-container">
+      <span class="unique-badge">Festive Sale</span>
+      <img src="./assets/Screenshot 2024-12-02 135239.png" alt="Cranberry T-shirt" class="unique-product-image">
+    </div>
+    <div class="unique-product-details">
+      <p class="unique-product-type">INTELLIGENT ROUND NECK T-SHIRT</p>
+      <h2 class="unique-product-name">CRANBERRY</h2>
+      <p class="unique-product-price">
+        Rs. 999.00 <span class="unique-original-price">Rs. 1,599.00</span>
+      </p>
+    </div>
+  </div>
+
+
+
+  <div class="pic">
+    <img src="./assets/Screenshot 2024-12-02 135619.png" alt="" height="700px" width="700px">
+  </div>
+
+
+  <div class="thala">
+    <img src="./assets/Screenshot 2024-12-02 141330.png" alt="" width="790px" height="360px">
+  </div>
+
+
+  <div class="text-section1">
+    <h2 style="color: white; font-size: 40px;">DHONI SPOTTED IN TURMS!</h2>
+    <p style="color: white;">Your chance to embrace the legendary style</p>
+  </div>
+
+  <section class="reviews-section">
+    <h2 class="section-title">LET CUSTOMERS SPEAK FOR US</h2>
+    <p class="review-summary">
+      <span class="stars">★★★★★</span><br>
+      from <strong>102 reviews</strong>
     </p>
-    <p style="margin-top: 18px; margin-left: 10px; font-size: 28px; font-weight: bold;">OUR LATEST WOMEN'S SMART FASHION
-    </p>
-
-    <div class="unique-product-card">
-        <div class="unique-image-container">
-            <span class="unique-badge">Festive Sale</span>
-            <img src="./assets/Screenshot 2024-12-02 135239.png" alt="Cranberry T-shirt" class="unique-product-image">
+    <div class="reviews-container">
+      <div class="review-card">
+        <div class="stars">★★★★★</div>
+        <h3>Fluorescent sky blue</h3>
+        <p>Fluorescent sky blue colour t-shirt<br>Lounch</p>
+        <div class="review-author">
+          <img src="./assets//alpine_2_still_70x70.png" alt="Reviewer" class="author-img">
+          <p>m.z.k.</p>
         </div>
-        <div class="unique-product-details">
-            <p class="unique-product-type">INTELLIGENT ROUND NECK T-SHIRT</p>
-            <h2 class="unique-product-name">CRANBERRY</h2>
-            <p class="unique-product-price">
-                Rs. 999.00 <span class="unique-original-price">Rs. 1,599.00</span>
-            </p>
+      </div>
+      <div class="review-card">
+        <div class="stars">★★★★★</div>
+        <h3>Good product</h3>
+        <p>Good product nice texture of apparel</p>
+        <div class="review-author">
+          <img src="./assets/02_4395d9f8-c97b-461f-b029-c648fcb4e4b4_70x70.png" alt="Reviewer" class="author-img">
+          <p>K.S.</p>
         </div>
-    </div>
-
-
-
-    <div class="pic">
-        <img src="./assets/Screenshot 2024-12-02 135619.png" alt="" height="700px" width="700px">
-    </div>
-
-
-    <div class="thala">
-        <img src="./assets/Screenshot 2024-12-02 141330.png" alt="" width="790px" height="360px">
-    </div>
-
-
-    <div class="text-section1">
-        <h2 style="color: white; font-size: 40px;">DHONI SPOTTED IN TURMS!</h2>
-        <p style="color: white;">Your chance to embrace the legendary style</p>
-    </div>
-
-    <section class="reviews-section">
-        <h2 class="section-title">LET CUSTOMERS SPEAK FOR US</h2>
-        <p class="review-summary">
-          <span class="stars">★★★★★</span><br>
-          from <strong>102 reviews</strong>
-        </p>
-        <div class="reviews-container">
-          <div class="review-card">
-            <div class="stars">★★★★★</div>
-            <h3>Fluorescent sky blue</h3>
-            <p>Fluorescent sky blue colour t-shirt<br>Lounch</p>
-            <div class="review-author">
-              <img src="./assets//alpine_2_still_70x70.png" alt="Reviewer" class="author-img">
-              <p>m.z.k.</p>
-            </div>
-          </div>
-          <div class="review-card">
-            <div class="stars">★★★★★</div>
-            <h3>Good product</h3>
-            <p>Good product nice texture of apparel</p>
-            <div class="review-author">
-              <img src="./assets/02_4395d9f8-c97b-461f-b029-c648fcb4e4b4_70x70.png" alt="Reviewer" class="author-img">
-              <p>K.S.</p>
-            </div>
-          </div>
-          <div class="review-card">
-            <div class="stars">★★★★★</div>
-            <h3>Extra soft premium</h3>
-            <p>Extra soft premium look value for money<br>New product waiting</p>
-            <div class="review-author">
-              <img src="./assets/01_5eec761b-24de-4179-842a-44cb96cb9d5a_70x70.png" alt="Reviewer" class="author-img">
-              <p>Yogesh Bhandari</p>
-            </div>
-          </div>
+      </div>
+      <div class="review-card">
+        <div class="stars">★★★★★</div>
+        <h3>Extra soft premium</h3>
+        <p>Extra soft premium look value for money<br>New product waiting</p>
+        <div class="review-author">
+          <img src="./assets/01_5eec761b-24de-4179-842a-44cb96cb9d5a_70x70.png" alt="Reviewer" class="author-img">
+          <p>Yogesh Bhandari</p>
         </div>
-      </section>
+      </div>
+    </div>
+  </section>
+  <hr>
 
 
-      
+
+  <section class="articles-section">
+    <div class="section-header">
+      <p class="subtitle">BE IN TOUCH</p>
+      <h2 class="section-title1">LATEST ARTICLES</h2>
+      <a href="#" class="read-all">READ ALL</a>
+    </div>
+    <div class="articles-container">
+      <article class="article-card">
+        <img src="/assets/6834f2c619f0b3c106ddace8838f6542.png" alt="Anti-stain white shirts" class="article-image">
+        <div class="article-details">
+          <p class="article-date">JULY 02, 2024 &nbsp; • &nbsp; BY URTURMS</p>
+          <h3 class="article-title">WHY ANTI-STAIN WHITE SHIRTS ARE A MUST-HAVE IN YOUR MENSWEAR COLLECTION</h3>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="./assets/6d8e869e23ffd0273493e575034f5a76.png" alt="Everyday wear jeans" class="article-image">
+        <div class="article-details">
+          <p class="article-date">JULY 02, 2024 &nbsp; • &nbsp; BY URTURMS</p>
+          <h3 class="article-title">EXPERIENCE TRUE COMFORT: MEN'S BEST EVERYDAY WEAR JEANS THAT STAY CLEAN FOR 30 DAYS
+          </h3>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="./assets/9a93739bb666bc6cf76f27cf91764463.png" alt="Premium jeans for men" class="article-image">
+        <div class="article-details">
+          <p class="article-date">FEBRUARY 28, 2024 &nbsp; • &nbsp; BY URTURMS</p>
+          <h3 class="article-title">PREMIUM JEANS FOR MEN BY TURMS</h3>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="./assets/0a35e84292efdefc91c6e9df761737d9.png" alt="Turms white shirts" class="article-image">
+        <div class="article-details">
+          <p class="article-date">January 27, 2024 &nbsp; • &nbsp; BY URTURMS</p>
+          <h3 class="article-title">TURMS WHITE SHIRTS</h3>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="./assets/d489b6ca791b7d04081c43b875be0684.png" alt="Turms white shirts" class="article-image">
+        <div class="article-details">
+          <p class="article-date">FEBRUARY 28, 2024 &nbsp; • &nbsp; BY URTURMS</p>
+          <h3 class="article-title">Captain Cool's Wardrobe Secret: MS Dhoni's Loyalty to Turms Intelligent Apparel</h3>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="./assets/bca16431be501bf60c23fb2d89fe407e.png" alt="Turms white shirts" class="article-image">
+        <div class="article-details">
+          <p class="article-date">FEBRUARY 28, 2024 &nbsp; • &nbsp; BY URTURMS</p>
+          <h3 class="article-title">Azar Iqbal's Investment in Best Menswear Brand</h3>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="./assets/467901ea7f94da12f665cba858adbcbd.png" alt="Turms white shirts" class="article-image">
+        <div class="article-details">
+          <p class="article-date">FEBRUARY 28, 2024 &nbsp; • &nbsp; BY URTURMS</p>
+          <h3 class="article-title">Turms Intelligent Apparel: A Journey to Success on Shark Tank Season 3</h3>
+        </div>
+      </article>
+      <article class="article-card">
+        <img src="./assets/8f7e447e17348cd0d4aa598285beff5c.png" alt="Turms white shirts" class="article-image">
+        <div class="article-details">
+          <p class="article-date">FEBRUARY 28, 2024 &nbsp; • &nbsp; BY URTURMS</p>
+          <h3 class="article-title">Travel Edition 30 Days No Wash Denim Jeans For Men</h3>
+        </div>
+      </article>
+    </div>
+  </section>
+
+
+  <hr>
+
+
+  
+
+
+
+
 
 
 
